[package]
name = "AdventOfCode"
version = "0.1.0"
authors = ["Wenley Tong <wenley.tong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/day1/day1.rs"

[[bin]]
name = "day1b"
path = "src/day1b/day1b.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[dependencies]
regex = "1"
