[package]
name = "AdventOfCode"
version = "0.1.0"
authors = ["Wenley Tong <wenley.tong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/day1/day1.rs"

[[bin]]
name = "day1b"
path = "src/day1b/day1b.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[[bin]]
name = "day2b"
path = "src/day2b/main.rs"

[[bin]]
name = "day3"
path = "src/day3/main.rs"

[[bin]]
name = "day4"
path = "src/day4/main.rs"

[[bin]]
name = "day5"
path = "src/day5/main.rs"

[[bin]]
name = "day6"
path = "src/day6/main.rs"

[dependencies]
regex = "1"
