[package]
name = "AdventOfCode"
version = "0.1.0"
authors = ["Wenley Tong <wenley.tong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/day01.rs"

[[bin]]
name = "day1b"
path = "src/day01b.rs"

[[bin]]
name = "day2"
path = "src/day02.rs"

[[bin]]
name = "day3"
path = "src/day03.rs"

[[bin]]
name = "day4"
path = "src/day04.rs"

[[bin]]
name = "day5"
path = "src/day05.rs"

[[bin]]
name = "day6"
path = "src/day06.rs"

[[bin]]
name = "day7"
path = "src/day07.rs"

[[bin]]
name = "day8"
path = "src/day08.rs"

[[bin]]
name = "day9"
path = "src/day09.rs"

[[bin]]
name = "day10"
path = "src/day10.rs"

[[bin]]
name = "day11"
path = "src/day11.rs"

[[bin]]
name = "day11b"
path = "src/day11b.rs"

[[bin]]
name = "day12"
path = "src/day12.rs"

[[bin]]
name = "day12b"
path = "src/day12b.rs"

[[bin]]
name = "day13"
path = "src/day13.rs"

[[bin]]
name = "day13b"
path = "src/day13b.rs"

[[bin]]
name = "day14"
path = "src/day14.rs"

[[bin]]
name = "day15"
path = "src/day15.rs"

[[bin]]
name = "day16"
path = "src/day16.rs"

[[bin]]
name = "day17"
path = "src/day17.rs"

[[bin]]
name = "day18"
path = "src/day18.rs"

[[bin]]
name = "day19"
path = "src/day19.rs"

[[bin]]
name = "day20"
path = "src/day20.rs"

[[bin]]
name = "day21"
path = "src/day21.rs"

[dependencies]
regex = "1"
petgraph = "0.4"
itertools = "0.9.0"
nom = "6.0.1"
